--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,34 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
 @import url(http://fonts.googleapis.com/css?family=Volkhov:400italic);
 /* var text-decoration */
+
+
+
+#slider .block {
+  padding-left: 0px;
+}
+
+#about-bkrd .block {
+  padding-left: 0px;
+}
+
+#portfolio-bkrd .block {
+  padding: 0;
+  margin:auto;
+}
+
+#blog-bkrd .block {
+  padding-left: 0px;
+}
+
+#contact-bkrd .block {
+  padding-left: 0px;
+}
+
+
+
+
+
 /*--
 	Common Css
 --*/
@@ -52,25 +80,34 @@ a:active {
   text-transform: uppercase;
   font-size: 28px;
   font-weight: 600;
+  padding: 0;
+  margin:auto;
 }
 .section-title p {
   font-family: 'Volkhov', serif;
   font-style: italic;
   color: #666;
+  padding: 0;
+  margin:auto;
 }
 
 .section-title-learn {
-  margin-top: 0px;
+  padding: 0;
+  margin:auto;
 }
 .section-title-learn h2 {
   text-transform: uppercase;
   font-size: 28px;
   font-weight: 600;
+  padding: 0;
+  margin:auto;
 }
 .section-title-learn p {
   font-family: 'Volkhov', serif;
   font-style: italic;
   color: #666;
+  padding: 0;
+  margin:auto;
 }
 /*--
 	Header Start
@@ -131,6 +168,7 @@ font header .navbar-default .navbar-nav li a:hover {
 }
 #slider .block {
   color: white;
+  padding-left: 0px;
   text-align: center;
 }
 #slider .block h1 {
@@ -237,130 +275,7 @@ font header .navbar-default .navbar-nav li a:hover {
   line-height: 1.8;
 }
 
-/*--
-	Feature Start
---*/
-#feature {
-  background: url("../img/featue-bg.jpg");
-  background-position: 50% 94px;
-  width: 100%;
-  display: block;
-  position: relative;
-  overflow: visible;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-color: #fff;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  padding: 100px 0;
-}
-#feature h2 {
-  font-size: 28px;
-  font-weight: 600;
-  margin-bottom: 30px;
-}
-#feature p {
-  color: #8d8f92;
-  margin-bottom: 20px;
-}
-#feature .btn-view-works {
-  background: #655E7A;
-  color: #fff;
-  padding: 10px 20px;
-}
-/*--
-	content Start
---*/
-#testimonial {
-  padding: 100px 0;
-}
-#testimonial .block h2 {
-  line-height: 27px;
-  color: #5C5C5C;
-  padding-top: 110px;
-}
-#testimonial .block p {
-  padding-top: 50px;
-  color: #7B7B7B;
-}
-#testimonial .counter-box li {
-  width: 50%;
-  float: left;
-  text-align: center;
-  margin: 30px 0 30px;
-}
-#testimonial .counter-box li i {
-  font-size: 35px;
-}
-#testimonial .counter-box li h4 {
-  font-size: 30px;
-  font-weight: bold;
-}
-#testimonial .counter-box li span {
-  color: #555;
-}
-#testimonial .testimonial-carousel {
-  text-align: center;
-  width: 75%;
-  border: 1px solid #DEDEDE;
-  padding: 24px;
-  margin: 0 auto;
-}
-#testimonial .testimonial-carousel img {
-  padding-bottom: 38px;
-}
-#testimonial .testimonial-carousel p {
-  line-height: 28px;
-  font-weight: 300;
-  padding-bottom: 20px;
-}
-#testimonial .testimonial-carousel .user img {
-  padding-bottom: 0px;
-  border-radius: 500px;
-}
-#testimonial .testimonial-carousel .user p {
-  padding-bottom: 0;
-  font-size: 12px;
-  line-height: 20px;
-  color: #353241;
-}
-#testimonial .testimonial-carousel .user p span {
-  display: block;
-  color: #353241;
-  font-weight: 600;
-}
-#testimonial .testimonial-carousel .owl-carousel .owl-pagination div {
-  border: 1px solid #1D1D1D;
-  border-radius: 500px;
-  display: inline-block;
-  height: 10px;
-  margin-right: 15px;
-  width: 10px;
-}
-#testimonial .testimonial-carousel .owl-carousel .owl-pagination div.active {
-  background: #5C5C5C;
-  font-size: 30px;
-  display: inline-block;
-  border: 0px;
-}
-/*--
-	features Start
---*/
-#clients-logo-section {
-  padding-top: 30px;
-  padding-bottom: 75px;
-}
-#clients-logo-section .clients-logo-img {
-  padding: 0px 50px;
-}
+
 /*---------------------------------------------
 					Work Start
 -----------------------------------------------*/
@@ -392,7 +307,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #about-bkrd .block {
   color: white;
   margin: 0 auto;
-  padding-left: 90px;
+  padding-left: 0px;
   text-align: center;
 }
 #about-bkrd .block h1 {
@@ -436,7 +351,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #portfolio-bkrd .block {
   color: white;
   margin: 0 auto;
-  padding-left: 90px;
+  padding-left: 0px;
   text-align: center;
 }
 #portfolio-bkrd .block h1 {
@@ -480,7 +395,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #blog-bkrd  .block {
   color: white;
   margin: 0 auto;
-  padding-left: 90px;
+  padding-left: 0px;
   text-align: center;
 }
 #blog-bkrd  .block h1 {
@@ -522,7 +437,7 @@ font header .navbar-default .navbar-nav li a:hover {
 #contact-bkrd .block {
   color: white;
   margin: 0 auto;
-  padding-left: 90px;
+  padding-left: 0px;
   text-align: center;
 }
 #contact-bkrd .block h1 {
@@ -921,7 +836,7 @@ footer {
   background: #F5F5F5;
   text-align: center;
   padding-top: 48px;
-  padding-bottom: 55px;
+  padding-bottom: 40px;
 }
 footer p {
   font-size: 13px;
